fix overflow-y body

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
 	background-color: black;
 	color: white;
 	margin-bottom: 80px;
-	overflow-y: hidden;
+	overflow-y: scroll;
 }
 
 a {
